--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-        <p>Creat by Abaz Udosen - Copyright {{getCurrentYear}}</p>
+        <p>Created by Abaz Udosen - Copyright {{getCurrentYear}}</p>
     </footer>
